fittings/crates/macros/tests/ui/fail/non_async_method.rs
#[fittings::service]
trait NonAsyncService {
    fn hello(&self, params: ()) -> Result<(), fittings::FittingsError>;
}

fn main() {}
